# cpp-sdk

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  README_building.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e__building_8md.html  _r_e_a_d_m_e__dependencies_8md.html  _r_e_a_d_m_e__docker_8md.html  _r_e_a_d_m_e__examples_8md.html  annotated.html  annotated_dup.js  ccd_8h.html  ccd_8h.js  ccd_8h__dep__incl.dot  ccd_8h__incl.dot  ccd_8h_source.html  ccds__discovery_8h.html  ccds__discovery_8h.js  ccds__discovery_8h__incl.dot  ccds__discovery_8h_source.html  classes.html  classhoriba_1_1communication_1_1_command-members.html  classhoriba_1_1communication_1_1_command.html  classhoriba_1_1communication_1_1_command.js  classhoriba_1_1communication_1_1_communicator-members.html  classhoriba_1_1communication_1_1_communicator.html  classhoriba_1_1communication_1_1_communicator.js  classhoriba_1_1communication_1_1_communicator__inherit__graph.dot  classhoriba_1_1communication_1_1_response-members.html  classhoriba_1_1communication_1_1_response.html  classhoriba_1_1communication_1_1_response.js  classhoriba_1_1communication_1_1_web_socket_communicator-members.html  classhoriba_1_1communication_1_1_web_socket_communicator.html  classhoriba_1_1communication_1_1_web_socket_communicator.js  classhoriba_1_1communication_1_1_web_socket_communicator__inherit__graph.dot  classhoriba_1_1devices_1_1_charge_coupled_devices_discovery-members.html  classhoriba_1_1devices_1_1_charge_coupled_devices_discovery.html  classhoriba_1_1devices_1_1_charge_coupled_devices_discovery.js  classhoriba_1_1devices_1_1_charge_coupled_devices_discovery__inherit__graph.dot  (+185 more)
.github/workflows/: documentation.yml  windows.yml
cmake/: Sanitizers.cmake  StaticAnalyzers.cmake
documentation/: CMakeLists.txt  Doxyfile
documentation/doxygen-custom/: header.html
documentation/pages/: gains_and_speeds.md  icl_api.md
fuzz_test/: fuzz_tester.cpp
include/horiba_cpp_sdk/core/stitching/: average_spectra_stitch.h  offset_spectra_stitch.h  simple_spectra_stitch.h  spectra_stitch.h  weight_average_spectra_stitch.h
include/horiba_cpp_sdk/devices/: device_manager.h  icl_device_manager.h  spectracq3s_discovery.h
include/horiba_cpp_sdk/devices/single_devices/: ccd.h  device.h  mono.h  spectracq3.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+65 more)
src/: CMakeLists.txt
src/core/stitching/: average_spectra_stitch.cpp  offset_spectra_stitch.cpp  simple_spectra_stitch.cpp  weight_average_spectra_stitch.cpp
src/devices/: icl_device_manager.cpp  spectracq3s_discovery.cpp
src/devices/single_devices/: ccd.cpp  mono.cpp  spectracq3.cpp
src/examples/: CMakeLists.txt  README.md  README_examples.md
src/examples/abort_acquisition/: CMakeLists.txt  main.cpp
src/examples/center_scan/: main.cpp
src/examples/dark_count_substraction/: CMakeLists.txt
src/examples/dark_count_subtraction/: CMakeLists.txt  main.cpp
src/examples/gain_speed_info/: main.cpp
src/examples/multiple_acquisitions/: CMakeLists.txt  main.cpp
src/examples/raman_shift/: CMakeLists.txt  main.cpp  raman_shift.cpp  raman_shift.h
src/examples/range_scan/: CMakeLists.txt  labspec6_spectra_stitch.cpp  labspec6_spectra_stitch.h  linear_spectra_stitch.cpp  linear_spectra_stitch.h  main.cpp  simple_cut_spectra_stitch.cpp  simple_cut_spectra_stitch.h  spectra_stitch.h
src/examples/save_data_to_disk/: CMakeLists.txt  main.cpp
src/examples/spectracq3/: CMakeLists.txt  main.cpp
src/examples/trigger/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  icl_exe.h  printing_helpers.h
test/core/stitching/: test_average_spectra_stitch.cpp  test_offset_spectra_stitch.cpp  test_simple_spectra_stitch.cpp  test_weight_average_spectra_stitch.cpp
test/devices/single_devices/: test_ccd.cpp  test_ccd_on_hw.cpp  test_mono.cpp  test_mono_on_hw.cpp  test_spectracq3_on_hw.cpp
test/fake_icl_responses/: ccd.json  monochromator.json  spectracq3.json
